# fh-swifty-chatbot

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  FRONTEND_ANALYSIS.md  FRONTEND_TEAM_README.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Informationen von A – Z für Beschäftigte der FH Südwestfalen.html  LICENSE  Neue_preprocess_to_jsonl.py  QUICKSTART.md  RAG_Preprocessing_pipeline.py  SERVICES.md  build.sh  chainlit.md  docker-compose.yaml  enhanced_frontend_example.py  load_into_qdrant.py  load_into_qdrant_VD.py  main.py  pyproject.toml  rag_tool.py  readme.md  test_blacklist.py  text.md
.chainlit/: config.toml
Neue_Codes KI_Intergration/: Dockerfile  Neo4j_Login_credentials.txt  Neue_preprocess_to_jsonl.py  README.md  Requirements.txt  clean_fh_chunks.py  embed_to_jsonl.py  kg_import_entity_to_entity_docker.py  load_into_neo4j.py  mcp_server.py  rag_tool.py  rag_tool_kg_entity_edges.py  requirement.txt
blacklist/: test.ipynb
crawler/: .gitignore  001_crawl_to_db.py  002_create_content.py  002_index_page.py  002_remove_duplicates.py  003_index_content.py  003_index_page.py  003_search_page.py  003_test_cognee.ipynb  003_update_link_properties.py  004_search_page.py  005_search_content.py  README.md  Sitemap.html  _003_assign_categories.py  _004_index_content.py  cognee_compat.py  crawl_fhswf.py  crawl_to_db.py  crawl_to_sqlite.py  demo_003_extract_entities.py  docker-compose.yaml  extract.ipynb  graph_after_cognify.html  neo4j_vector_search.ipynb  ontology-schema-university.md  ontology-schema-university_public.md  ontology-schema-university_public_sitemap.md  pdf_to_md.ipynb  pyproject.toml  query_db.py  s43681-022-00200-5.md  test_cognee.ipynb  tex copy 4.md  tex.md  text.html
crawler/demo_data/: modulhandbook.md
crawler/research/: graph_transformer_llm_diffbot.ipynb  neo4j_vector_search.ipynb
feedback/: feedback.json  feedback.jsonl
fh-swifty-chatbot/: __init__.py  agent_langgraph_app.py  main.py
k8s/: application.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  mcp-server-deployment.yaml  mcp-server-ingress.yaml  mcp-server-service.yaml  neo4j-pvc.yaml  (+7 more)
(+31 files in other folders)
