[project]
name = "fh-swifty-chatbot"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.7.2",
    "crawl4ai>=0.7.4",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
]

[tool.setuptools.packages.find]
include = ["fh-swifty-chatbot*"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
