[project]
name = "fh-swifty-chatbot"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.7.2",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "selenium>=4.35.0",
]

[tool.setuptools.packages.find]
include = ["fh-swifty-chatbot*"]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.5",
    "crawl4ai>=0.7.4",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.29",
    "selenium>=4.35.0",
    "unstructured>=0.18.14",
]
