[project]
name = "crawler"
version = "0.1.0"
description = "Crawler für die FH-SWF Website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "scrapy>=2.13.3",
    "neo4j>=5.14.0",
    "docling>=2.55.1",
    "pymupdf4llm>=0.0.27",
    "html-to-markdown[lxml]>=1.16.0",
]
